extensions/dear-node-editor-sys/src/bindings_pregenerated.rs

// AUTOGENERATED: pregenerated bindings for docs.rs/offline builds
// Note: inner attributes are intentionally omitted to avoid include-context errors.

/* automatically generated by rust-bindgen 0.72.1 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DneEditorContext {
    _unused: [u8; 0],
}
pub const DNE_PIN_KIND_INPUT: DnePinKind = 0;
pub const DNE_PIN_KIND_OUTPUT: DnePinKind = 1;
pub type DnePinKind = ::std::os::raw::c_int;
pub const DNE_FLOW_FORWARD: DneFlowDirection = 0;
pub const DNE_FLOW_BACKWARD: DneFlowDirection = 1;
pub type DneFlowDirection = ::std::os::raw::c_int;
pub const DNE_CANVAS_SIZE_FIT_VERTICAL_VIEW: DneCanvasSizeMode = 0;
pub const DNE_CANVAS_SIZE_FIT_HORIZONTAL_VIEW: DneCanvasSizeMode = 1;
pub const DNE_CANVAS_SIZE_CENTER_ONLY: DneCanvasSizeMode = 2;
pub type DneCanvasSizeMode = ::std::os::raw::c_int;
pub const DNE_SAVE_REASON_NONE: DneSaveReasonFlags = 0;
pub const DNE_SAVE_REASON_NAVIGATION: DneSaveReasonFlags = 1;
pub const DNE_SAVE_REASON_POSITION: DneSaveReasonFlags = 2;
pub const DNE_SAVE_REASON_SIZE: DneSaveReasonFlags = 4;
pub const DNE_SAVE_REASON_SELECTION: DneSaveReasonFlags = 8;
pub const DNE_SAVE_REASON_ADD_NODE: DneSaveReasonFlags = 16;
pub const DNE_SAVE_REASON_REMOVE_NODE: DneSaveReasonFlags = 32;
pub const DNE_SAVE_REASON_USER: DneSaveReasonFlags = 64;
pub type DneSaveReasonFlags = ::std::os::raw::c_int;
pub const DNE_STYLE_COLOR_BG: DneStyleColor = 0;
pub const DNE_STYLE_COLOR_GRID: DneStyleColor = 1;
pub const DNE_STYLE_COLOR_NODE_BG: DneStyleColor = 2;
pub const DNE_STYLE_COLOR_NODE_BORDER: DneStyleColor = 3;
pub const DNE_STYLE_COLOR_HOVERED_NODE_BORDER: DneStyleColor = 4;
pub const DNE_STYLE_COLOR_SELECTED_NODE_BORDER: DneStyleColor = 5;
pub const DNE_STYLE_COLOR_NODE_SELECTION_RECT: DneStyleColor = 6;
pub const DNE_STYLE_COLOR_NODE_SELECTION_RECT_BORDER: DneStyleColor = 7;
pub const DNE_STYLE_COLOR_HOVERED_LINK_BORDER: DneStyleColor = 8;
pub const DNE_STYLE_COLOR_SELECTED_LINK_BORDER: DneStyleColor = 9;
pub const DNE_STYLE_COLOR_HIGHLIGHT_LINK_BORDER: DneStyleColor = 10;
pub const DNE_STYLE_COLOR_LINK_SELECTION_RECT: DneStyleColor = 11;
pub const DNE_STYLE_COLOR_LINK_SELECTION_RECT_BORDER: DneStyleColor = 12;
pub const DNE_STYLE_COLOR_PIN_RECT: DneStyleColor = 13;
pub const DNE_STYLE_COLOR_PIN_RECT_BORDER: DneStyleColor = 14;
pub const DNE_STYLE_COLOR_FLOW: DneStyleColor = 15;
pub const DNE_STYLE_COLOR_FLOW_MARKER: DneStyleColor = 16;
pub const DNE_STYLE_COLOR_GROUP_BG: DneStyleColor = 17;
pub const DNE_STYLE_COLOR_GROUP_BORDER: DneStyleColor = 18;
pub const DNE_STYLE_COLOR_COUNT: DneStyleColor = 19;
pub type DneStyleColor = ::std::os::raw::c_int;
pub const DNE_STYLE_VAR_NODE_PADDING: DneStyleVar = 0;
pub const DNE_STYLE_VAR_NODE_ROUNDING: DneStyleVar = 1;
pub const DNE_STYLE_VAR_NODE_BORDER_WIDTH: DneStyleVar = 2;
pub const DNE_STYLE_VAR_HOVERED_NODE_BORDER_WIDTH: DneStyleVar = 3;
pub const DNE_STYLE_VAR_SELECTED_NODE_BORDER_WIDTH: DneStyleVar = 4;
pub const DNE_STYLE_VAR_PIN_ROUNDING: DneStyleVar = 5;
pub const DNE_STYLE_VAR_PIN_BORDER_WIDTH: DneStyleVar = 6;
pub const DNE_STYLE_VAR_LINK_STRENGTH: DneStyleVar = 7;
pub const DNE_STYLE_VAR_SOURCE_DIRECTION: DneStyleVar = 8;
pub const DNE_STYLE_VAR_TARGET_DIRECTION: DneStyleVar = 9;
pub const DNE_STYLE_VAR_SCROLL_DURATION: DneStyleVar = 10;
pub const DNE_STYLE_VAR_FLOW_MARKER_DISTANCE: DneStyleVar = 11;
pub const DNE_STYLE_VAR_FLOW_SPEED: DneStyleVar = 12;
pub const DNE_STYLE_VAR_FLOW_DURATION: DneStyleVar = 13;
pub const DNE_STYLE_VAR_PIVOT_ALIGNMENT: DneStyleVar = 14;
pub const DNE_STYLE_VAR_PIVOT_SIZE: DneStyleVar = 15;
pub const DNE_STYLE_VAR_PIVOT_SCALE: DneStyleVar = 16;
pub const DNE_STYLE_VAR_PIN_CORNERS: DneStyleVar = 17;
pub const DNE_STYLE_VAR_PIN_RADIUS: DneStyleVar = 18;
pub const DNE_STYLE_VAR_PIN_ARROW_SIZE: DneStyleVar = 19;
pub const DNE_STYLE_VAR_PIN_ARROW_WIDTH: DneStyleVar = 20;
pub const DNE_STYLE_VAR_GROUP_ROUNDING: DneStyleVar = 21;
pub const DNE_STYLE_VAR_GROUP_BORDER_WIDTH: DneStyleVar = 22;
pub const DNE_STYLE_VAR_HIGHLIGHT_CONNECTED_LINKS: DneStyleVar = 23;
pub const DNE_STYLE_VAR_SNAP_LINK_TO_PIN_DIR: DneStyleVar = 24;
pub const DNE_STYLE_VAR_HOVERED_NODE_BORDER_OFFSET: DneStyleVar = 25;
pub const DNE_STYLE_VAR_SELECTED_NODE_BORDER_OFFSET: DneStyleVar = 26;
pub const DNE_STYLE_VAR_COUNT: DneStyleVar = 27;
pub type DneStyleVar = ::std::os::raw::c_int;
pub type DneConfigSession =
    ::std::option::Option<unsafe extern "C" fn(user_pointer: *mut ::std::os::raw::c_void)>;
pub type DneConfigSaveSettings = ::std::option::Option<
    unsafe extern "C" fn(
        data: *const ::std::os::raw::c_char,
        size: usize,
        reason: DneSaveReasonFlags,
        user_pointer: *mut ::std::os::raw::c_void,
    ) -> bool,
>;
pub type DneConfigLoadSettings = ::std::option::Option<
    unsafe extern "C" fn(
        data: *mut ::std::os::raw::c_char,
        user_pointer: *mut ::std::os::raw::c_void,
    ) -> usize,
>;
pub type DneConfigSaveNodeSettings = ::std::option::Option<
    unsafe extern "C" fn(
        node_id: usize,
        data: *const ::std::os::raw::c_char,
        size: usize,
        reason: DneSaveReasonFlags,
        user_pointer: *mut ::std::os::raw::c_void,
    ) -> bool,
>;
pub type DneConfigLoadNodeSettings = ::std::option::Option<
    unsafe extern "C" fn(
        node_id: usize,
        data: *mut ::std::os::raw::c_char,
        user_pointer: *mut ::std::os::raw::c_void,
    ) -> usize,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DneConfig {
    pub settings_file: *const ::std::os::raw::c_char,
    pub begin_save_session: DneConfigSession,
    pub end_save_session: DneConfigSession,
    pub save_settings: DneConfigSaveSettings,
    pub load_settings: DneConfigLoadSettings,
    pub save_node_settings: DneConfigSaveNodeSettings,
    pub load_node_settings: DneConfigLoadNodeSettings,
    pub user_pointer: *mut ::std::os::raw::c_void,
    pub canvas_size_mode: DneCanvasSizeMode,
    pub drag_button_index: ::std::os::raw::c_int,
    pub select_button_index: ::std::os::raw::c_int,
    pub navigate_button_index: ::std::os::raw::c_int,
    pub context_menu_button_index: ::std::os::raw::c_int,
    pub enable_smooth_zoom: bool,
    pub smooth_zoom_power: f32,
}
impl Default for DneConfig {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn dne_create_editor(config: *const DneConfig) -> *mut DneEditorContext;
}
unsafe extern "C" {
    pub fn dne_destroy_editor(ctx: *mut DneEditorContext);
}
unsafe extern "C" {
    pub fn dne_editor_context_raw(ctx: *mut DneEditorContext) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn dne_get_current_editor_raw() -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn dne_set_current_editor_raw(ctx: *mut ::std::os::raw::c_void);
}
unsafe extern "C" {
    pub fn dne_set_current_editor(ctx: *mut DneEditorContext);
}
unsafe extern "C" {
    pub fn dne_get_style_color_name(color: DneStyleColor) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn dne_push_style_color(color: DneStyleColor, value: ImVec4_c);
}
unsafe extern "C" {
    pub fn dne_pop_style_color(count: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn dne_push_style_var_float(var: DneStyleVar, value: f32);
}
unsafe extern "C" {
    pub fn dne_push_style_var_vec2(var: DneStyleVar, value: ImVec2_c);
}
unsafe extern "C" {
    pub fn dne_push_style_var_vec4(var: DneStyleVar, value: ImVec4_c);
}
unsafe extern "C" {
    pub fn dne_pop_style_var(count: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn dne_begin(id: *const ::std::os::raw::c_char, size: ImVec2_c);
}
unsafe extern "C" {
    pub fn dne_end();
}
unsafe extern "C" {
    pub fn dne_begin_node(node_id: usize);
}
unsafe extern "C" {
    pub fn dne_end_node();
}
unsafe extern "C" {
    pub fn dne_begin_pin(pin_id: usize, kind: DnePinKind);
}
unsafe extern "C" {
    pub fn dne_end_pin();
}
unsafe extern "C" {
    pub fn dne_group(size: ImVec2_c);
}
unsafe extern "C" {
    pub fn dne_link(
        link_id: usize,
        start_pin_id: usize,
        end_pin_id: usize,
        color: ImVec4_c,
        thickness: f32,
    ) -> bool;
}
unsafe extern "C" {
    pub fn dne_flow(link_id: usize, direction: DneFlowDirection);
}
unsafe extern "C" {
    pub fn dne_begin_create(color: ImVec4_c, thickness: f32) -> bool;
}
unsafe extern "C" {
    pub fn dne_query_new_link(start_pin_id: *mut usize, end_pin_id: *mut usize) -> bool;
}
unsafe extern "C" {
    pub fn dne_query_new_link_styled(
        start_pin_id: *mut usize,
        end_pin_id: *mut usize,
        color: ImVec4_c,
        thickness: f32,
    ) -> bool;
}
unsafe extern "C" {
    pub fn dne_query_new_node(pin_id: *mut usize) -> bool;
}
unsafe extern "C" {
    pub fn dne_query_new_node_styled(pin_id: *mut usize, color: ImVec4_c, thickness: f32) -> bool;
}
unsafe extern "C" {
    pub fn dne_accept_new_item() -> bool;
}
unsafe extern "C" {
    pub fn dne_accept_new_item_styled(color: ImVec4_c, thickness: f32) -> bool;
}
unsafe extern "C" {
    pub fn dne_reject_new_item();
}
unsafe extern "C" {
    pub fn dne_reject_new_item_styled(color: ImVec4_c, thickness: f32);
}
unsafe extern "C" {
    pub fn dne_end_create();
}
unsafe extern "C" {
    pub fn dne_begin_delete() -> bool;
}
unsafe extern "C" {
    pub fn dne_query_deleted_link(
        link_id: *mut usize,
        start_pin_id: *mut usize,
        end_pin_id: *mut usize,
    ) -> bool;
}
unsafe extern "C" {
    pub fn dne_query_deleted_node(node_id: *mut usize) -> bool;
}
unsafe extern "C" {
    pub fn dne_accept_deleted_item(delete_dependencies: bool) -> bool;
}
unsafe extern "C" {
    pub fn dne_reject_deleted_item();
}
unsafe extern "C" {
    pub fn dne_end_delete();
}
unsafe extern "C" {
    pub fn dne_set_node_position(node_id: usize, editor_position: ImVec2_c);
}
unsafe extern "C" {
    pub fn dne_set_group_size(node_id: usize, size: ImVec2_c);
}
unsafe extern "C" {
    pub fn dne_get_node_position(node_id: usize) -> ImVec2_c;
}
unsafe extern "C" {
    pub fn dne_get_node_size(node_id: usize) -> ImVec2_c;
}
unsafe extern "C" {
    pub fn dne_center_node_on_screen(node_id: usize);
}
unsafe extern "C" {
    pub fn dne_set_node_z_position(node_id: usize, z: f32);
}
unsafe extern "C" {
    pub fn dne_get_node_z_position(node_id: usize) -> f32;
}
unsafe extern "C" {
    pub fn dne_restore_node_state(node_id: usize);
}
unsafe extern "C" {
    pub fn dne_suspend();
}
unsafe extern "C" {
    pub fn dne_resume();
}
unsafe extern "C" {
    pub fn dne_is_suspended() -> bool;
}
unsafe extern "C" {
    pub fn dne_is_active() -> bool;
}
unsafe extern "C" {
    pub fn dne_has_selection_changed() -> bool;
}
unsafe extern "C" {
    pub fn dne_get_selected_object_count() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn dne_get_selected_nodes(
        nodes: *mut usize,
        size: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn dne_get_selected_links(
        links: *mut usize,
        size: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn dne_is_node_selected(node_id: usize) -> bool;
}
unsafe extern "C" {
    pub fn dne_is_link_selected(link_id: usize) -> bool;
}
unsafe extern "C" {
    pub fn dne_clear_selection();
}
unsafe extern "C" {
    pub fn dne_select_node(node_id: usize, append: bool);
}
unsafe extern "C" {
    pub fn dne_select_link(link_id: usize, append: bool);
}
unsafe extern "C" {
    pub fn dne_deselect_node(node_id: usize);
}
unsafe extern "C" {
    pub fn dne_deselect_link(link_id: usize);
}
unsafe extern "C" {
    pub fn dne_delete_node(node_id: usize) -> bool;
}
unsafe extern "C" {
    pub fn dne_delete_link(link_id: usize) -> bool;
}
unsafe extern "C" {
    pub fn dne_has_any_links_node(node_id: usize) -> bool;
}
unsafe extern "C" {
    pub fn dne_has_any_links_pin(pin_id: usize) -> bool;
}
unsafe extern "C" {
    pub fn dne_break_links_node(node_id: usize) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn dne_break_links_pin(pin_id: usize) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn dne_navigate_to_content(duration: f32);
}
unsafe extern "C" {
    pub fn dne_navigate_to_selection(zoom_in: bool, duration: f32);
}
unsafe extern "C" {
    pub fn dne_show_node_context_menu(node_id: *mut usize) -> bool;
}
unsafe extern "C" {
    pub fn dne_show_pin_context_menu(pin_id: *mut usize) -> bool;
}
unsafe extern "C" {
    pub fn dne_show_link_context_menu(link_id: *mut usize) -> bool;
}
unsafe extern "C" {
    pub fn dne_show_background_context_menu() -> bool;
}
unsafe extern "C" {
    pub fn dne_enable_shortcuts(enable: bool);
}
unsafe extern "C" {
    pub fn dne_are_shortcuts_enabled() -> bool;
}
unsafe extern "C" {
    pub fn dne_begin_shortcut() -> bool;
}
unsafe extern "C" {
    pub fn dne_accept_cut() -> bool;
}
unsafe extern "C" {
    pub fn dne_accept_copy() -> bool;
}
unsafe extern "C" {
    pub fn dne_accept_paste() -> bool;
}
unsafe extern "C" {
    pub fn dne_accept_duplicate() -> bool;
}
unsafe extern "C" {
    pub fn dne_accept_create_node() -> bool;
}
unsafe extern "C" {
    pub fn dne_get_action_context_size() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn dne_get_action_context_nodes(
        nodes: *mut usize,
        size: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn dne_get_action_context_links(
        links: *mut usize,
        size: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn dne_end_shortcut();
}
unsafe extern "C" {
    pub fn dne_get_current_zoom() -> f32;
}
unsafe extern "C" {
    pub fn dne_get_hovered_node(node_id: *mut usize) -> bool;
}
unsafe extern "C" {
    pub fn dne_get_hovered_pin(pin_id: *mut usize) -> bool;
}
unsafe extern "C" {
    pub fn dne_get_hovered_link(link_id: *mut usize) -> bool;
}
unsafe extern "C" {
    pub fn dne_get_double_clicked_node(node_id: *mut usize) -> bool;
}
unsafe extern "C" {
    pub fn dne_get_double_clicked_pin(pin_id: *mut usize) -> bool;
}
unsafe extern "C" {
    pub fn dne_get_double_clicked_link(link_id: *mut usize) -> bool;
}
unsafe extern "C" {
    pub fn dne_is_background_clicked() -> bool;
}
unsafe extern "C" {
    pub fn dne_is_background_double_clicked() -> bool;
}
unsafe extern "C" {
    pub fn dne_get_background_click_button_index() -> ImGuiMouseButton;
}
unsafe extern "C" {
    pub fn dne_get_background_double_click_button_index() -> ImGuiMouseButton;
}
unsafe extern "C" {
    pub fn dne_get_link_pins(
        link_id: usize,
        start_pin_id: *mut usize,
        end_pin_id: *mut usize,
    ) -> bool;
}
unsafe extern "C" {
    pub fn dne_pin_had_any_links(pin_id: usize) -> bool;
}
unsafe extern "C" {
    pub fn dne_get_screen_size() -> ImVec2_c;
}
unsafe extern "C" {
    pub fn dne_screen_to_canvas(pos: ImVec2_c) -> ImVec2_c;
}
unsafe extern "C" {
    pub fn dne_canvas_to_screen(pos: ImVec2_c) -> ImVec2_c;
}
unsafe extern "C" {
    pub fn dne_get_node_count() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn dne_get_ordered_node_ids(
        nodes: *mut usize,
        size: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
